--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
             <a href="https://vk.com/feed">My VK</a>
             <a href="https://www.instagram.com/?hl=ru">My Instagram</a>
             <a href="https://es-es.facebook.com/">My Facebooke</a>
+            <a href="https://dvaid0805.github.io/MyShoppingList/">My shopping list--e</a>
+            <a href="https://github.com/Dvaid0805/MyAnchorsEx">MyAnchorsEx--e</a>
         </nav>
     </footer>
 </body>
